--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to DigitalOcean
+name: Deploy app to VPS
 
 on:
   push:
@@ -10,29 +10,37 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Go
-      uses: actions/setup-go@v3
-      with:
-        go-version: '1.23'
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: '1.23'
 
-    - name: Build Go app
-      run: |
-        go mod tidy
-        go build -o api ./cmd/api
+      - name: Build Go app
+        run: |
+          go mod tidy
+          go build -o api
 
-    - name: Set up SSH key
-      uses: webfactory/ssh-agent@v0.5.3
-      with:
-        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+      - name: Set up SSH key
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-    - name: Deploy Go app to VPS
-      run: |
-        scp -o StrictHostKeyChecking=no api zh@165.22.80.158:/var/www/blog_backend
+      - name: Stop the Go app service
+        run: |
+          ssh -o StrictHostKeyChecking=no zh@165.22.80.158 'sudo systemctl stop blog_backend.service'
 
-    - name: Restart Go app on VPS
-      run: |
-        ssh -o StrictHostKeyChecking=no zh@165.22.80.158 'sudo /bin/systemctl restart blog_backend.service'
+      - name: Remove old API binary on VPS
+        run: |
+          ssh -o StrictHostKeyChecking=no zh@165.22.80.158 'rm -f /var/www/blog_backend/api'
+
+      - name: Copy new API binary to VPS
+        run: |
+          scp -o StrictHostKeyChecking=no api zh@165.22.80.158:/var/www/blog_backend/
+
+      - name: Restart the Go app service
+        run: |
+          ssh -o StrictHostKeyChecking=no zh@165.22.80.158 'sudo systemctl start blog_backend.service'
 
